Fix size of "Create new dweet" button
This ensures that the text never overflows to a second line

--- a/dwitter/static/main.css
+++ b/dwitter/static/main.css
@@ -213,7 +213,7 @@ input.comment-submit:active {
   color: white;
   font-size: 1.1em;
   cursor: pointer;
-  width: 50%;
+  width: 200px;
   font-weight: bold;
   text-align: center;
   padding: 10px;
